--- a/src/quizes.html
+++ b/src/quizes.html
@@ -9,7 +9,17 @@
         /* Additional CSS */
         /* @import url('quizes.css'); */
         @import url('output.css');
+
+        /* #progress {
+            --outline: purple;
+        } */
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
+        integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -124,7 +134,17 @@
                                     <img src="https://www.lumni.fr/images/icons/histoire.svg" class="max-w-8">
                                     THE HISTORY OF HALLOWEEN
                                 </div>
-                                <strong>1/10</strong>
+                                <div class="flex space-x-2 items-center">
+                                    <span class="text-sm">3/4</span>
+                                    <div id="progress"
+                                        style="background: conic-gradient(var(--outline, #3F52FF) 25%, transparent 25%);"
+                                        class="w-11 h-11 rounded-full  grid place-items-center">
+                                        <div
+                                            class="w-10 h-10 bg-[#E6DCCF] text-[0.65rem] rounded-full flex items-center justify-center">
+                                            <strong>25%</strong>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="w-full my-2 bg-[#D2C9C9] rounded-full h-1.5 mb-4">
                                 <div class="bg-[#FE898D] h-1.5 rounded-full" style="width: 10%"></div>
@@ -727,7 +747,53 @@
         </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+        integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
+
+        $(document).ready(function () {
+            // console.log("--- jquery loaded", $);
+            $('#home-slider').slick({
+                dots: true,
+                infinite: false,
+                speed: 300,
+                slidesToShow: 4,
+                slidesToScroll: 4,
+                responsive: [
+                    {
+                        breakpoint: 1024,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 3,
+                            infinite: true,
+                            dots: true
+                        }
+                    },
+                    {
+                        breakpoint: 600,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 2
+                        }
+                    },
+                    {
+                        breakpoint: 480,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                    // You can unslick at a given breakpoint now by adding:
+                    // settings: "unslick"
+                    // instead of a settings object
+                ]
+            });
+
+        });
+
         document.addEventListener('DOMContentLoaded', function () {
             var accountButton = document.getElementById('my-account');
             var submenu = document.getElementById('submenu');
