--- a/src/ce1.html
+++ b/src/ce1.html
@@ -17,21 +17,23 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
+        #subject-slider .slick-track,
         #home-slider .slick-track {
             padding-top: 1rem;
         }
 
+        /* #subject-slider .slick-list, */
         #home-slider .slick-list {
             height: 28rem !important;
             overflow: hidden;
         }
 
-        button[aria-disabled="true"] {
-            display: none !important;
+        #subject-slider .slick-list {
+            height: 8rem !important;
         }
 
-        #subject-slider .slick-slide .slick-current .slick-active {
-            width: 170px !important;
+        button[aria-disabled="true"] {
+            display: none !important;
         }
     </style>
 </head>
@@ -97,10 +99,80 @@
                 Choose a theme, a subject
             </div>
 
-            <section id="subject-slider" class="flex items-center md:justify-center w-full md:pb-16 pb-[26rem] space-x-4">
-                <div class="w-10 h-20 bg-red-500">Dave</div>
-                <div class="w-10 h-20 bg-red-500">Dave</div>
-                <div class="w-10 h-20 bg-red-500">Dave</div>
+            <!-- flex items-center md:justify-center w-full md:pb-16 pb-[26rem] -->
+            <section id="subject-slider" class="text-white">
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/maths-primaire.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">Math</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/langage.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">French</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/questionner-le-monde.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">Question the world</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/enseignement-moral-et-civique.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">EMC</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/activites.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">Activities</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/activites.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">Activities</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/activites.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">Activities</h2>
+                    </div>
+                </div>
+                <div
+                    class="flex max-w-[15rem] justify-center relative md:p-1 md:px-16 rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-105 hover:cursor-pointer shadow-container 
+                    hover:bg-[#2D3EBF] bg-[#3F52FF] border-b-[#2D3EBF]">
+                    <div class="w-full h-24 flex flex-col text-center items-center justify-center gap-1">
+                        <img src="https://www.lumni.fr/images/emojis/subjects/activites.png"
+                                class="md:h-8 h-6">
+                                <h2 class="text-lg font-medium">Activities</h2>
+                    </div>
+                </div>
             </section>
         </div>
     </section>
@@ -431,19 +503,19 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         $(document).ready(function () {
-            $("#subject-slider").slick({
-                slidesToShow: 4,
-                slidesToScroll: 4,
-            });
 
+            var getArrows = function ($top, $count = 4) {
+                return {
+                prevArrow: "<button type='button' class='absolute z-20 top-["+$top+"%] shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z' /></svg></button>",
+                nextArrow: "<button type='button' class='absolute z-20 top-["+$top+"%] right-1 shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z' /></svg></button>",
+                slidesToShow: $count,
+                slidesToScroll: $count,
+            }
+            }
 
-            $('#home-slider').slick({
+            var cardSliderOptions = {
                 infinite: false,
                 speed: 300,
-                slidesToShow: 4,
-                slidesToScroll: 4,
-                prevArrow: "<button type='button' class='absolute z-20 top-[40%] shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z' /></svg></button>",
-                nextArrow: "<button type='button' class='absolute z-20 top-[40%] right-1 shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z' /></svg></button>",
                 responsive: [
                     {
                         breakpoint: 1024,
@@ -472,7 +544,14 @@
                     // settings: "unslick"
                     // instead of a settings object
                 ]
-            });
+            };
+
+            var subjectSliderOptions = Object.assign(getArrows(40, 5), cardSliderOptions);
+            var homeSliderOptions = Object.assign(getArrows(40), cardSliderOptions);
+
+
+            $("#subject-slider").slick(subjectSliderOptions);
+            $('#home-slider').slick(homeSliderOptions);
 
         });
     </script>
