ft: work on home page quizes section

--- a/src/lumni.html
+++ b/src/lumni.html
@@ -269,6 +269,8 @@
                         </div>
                         <span class="absolute -top-2.5 left-5 p-2 px-3 z-1 text-xs bg-white font-semibold"
                             style="border-radius: 0.75rem 0 0.75rem 0;">Restricted</span>
+                        <span class="absolute -top-2.5 right-5 p-2 px-3 z-1 text-xs bg-white font-semibold"
+                            style="border-radius: 0 0.75rem 0 0.75rem;">10%</span>
                     </div>
                     <div
                         class="flex flex-col items-center justify-center relative p-3 space-y-4 bg-white rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
