--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -12,7 +12,7 @@
 
 <body>
     <section class="flex" style="min-height: 100svh;">
-        <div class="flex flex-col items-center w-24 border-r-2 text-white py-4">
+        <div class="hidden lg:flex flex-col items-center w-24 border-r-2 text-white py-4">
             <div class="flex flex-col items-center justify-between h-full">
                 <div>
                     <a href="#">
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <section class="bg-light-gray p-4 pl-12 w-full overflow-auto">
+        <section class="bg-light-gray p-4 lg:pl-12 w-full overflow-auto">
             <nav class="flex items-center justify-between w-full relative">
                 <div class="text-lg">
                     <h2 class="font-medium">Bonjour Mohammed</h2>
@@ -86,7 +86,7 @@
             </nav>
 
             <!-- Circle charts -->
-            <section class="grid grid-cols-3 gap-4 mt-8">
+            <section class="grid md:grid-cols-2 lg:grid-cols-3 gap-4 mt-8">
                 <div class="flex items-center justify-between w-full space-x-2 rounded-lg border py-4 px-6 bg-white">
                     <div class="space-y-2">
                         <div class="font-medium">Mathematics</div>
@@ -109,19 +109,19 @@
 
                     <!-- circular chart -->
                     <div style="background: conic-gradient(var(--outline, #3F52FF) 100%, transparent 100%);"
-                        class="w-28 h-28 rounded-full  grid place-items-center">
+                        class="lg:w-28 lg:h-28 sm:w-24 sm:h-24 w-20 h-20 rounded-full  grid place-items-center">
                         <div
-                            class="w-[6.5rem] h-[6.5rem] bg-white text-[0.65rem] rounded-full flex items-center justify-center">
-                            <div class="flex flex-col text-2xl text-center leading-6">
+                            class="lg:w-[6.5rem] lg:h-[6.5rem] sm:w-[5.50rem] sm:h-[5.50rem] w-[4.5rem] h-[4.5rem] bg-white text-[0.65rem] rounded-full flex items-center justify-center">
+                            <div class="flex flex-col text-xl sm:text-2xl text-center leading-6">
                                 <span class="font-extrabold">100%</span>
-                                <span class="text-xs">Score moyen</span>
+                                <span class="text-xs"><span class="block sm:inline-block">Score</span> moyen</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="flex items-center justify-between w-full space-x-2 rounded-lg border py-4 px-6 bg-white">
                     <div class="space-y-2">
-                        <div class="font-medium">Mathematics</div>
+                        <div class="font-medium">French</div>
                         <div class="text-sm">Number of activities completed</div>
 
                         <div>
@@ -141,10 +141,10 @@
 
                     <!-- circular chart -->
                     <div style="background: conic-gradient(var(--outline, #fc18f6) 40%, transparent 40%);"
-                        class="w-28 h-28 rounded-full  grid place-items-center">
+                        class="lg:w-28 lg:h-28 sm:w-24 sm:h-24 w-20 h-20 rounded-full  grid place-items-center">
                         <div
-                            class="w-[6.5rem] h-[6.5rem] bg-white text-[0.65rem] rounded-full flex items-center justify-center">
-                            <div class="flex flex-col text-2xl text-center leading-6">
+                            class="lg:w-[6.5rem] lg:h-[6.5rem] sm:w-[5.50rem] sm:h-[5.50rem] w-[4.5rem] h-[4.5rem] bg-white text-[0.65rem] rounded-full flex items-center justify-center">
+                            <div class="flex flex-col text-xl sm:text-2xl text-center leading-6">
                                 <span class="font-extrabold">40%</span>
                                 <span class="text-xs">Progress</span>
                             </div>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="flex items-center justify-between w-full space-x-2 rounded-lg border py-4 px-6 bg-white">
                     <div class="space-y-2">
-                        <div class="font-medium">Mathematics</div>
+                        <div class="font-medium">Anglais</div>
                         <div class="text-sm">Number of activities completed</div>
 
                         <div>
@@ -173,10 +173,10 @@
 
                     <!-- circular chart -->
                     <div style="background: conic-gradient(var(--outline, #fc7638) 90%, transparent 90%);"
-                        class="w-28 h-28 rounded-full  grid place-items-center">
+                        class="lg:w-28 lg:h-28 sm:w-24 sm:h-24 w-20 h-20 rounded-full  grid place-items-center">
                         <div
-                            class="w-[6.5rem] h-[6.5rem] bg-white text-[0.65rem] rounded-full flex items-center justify-center">
-                            <div class="flex flex-col text-2xl text-center leading-6">
+                            class="lg:w-[6.5rem] lg:h-[6.5rem] sm:w-[5.50rem] sm:h-[5.50rem] w-[4.5rem] h-[4.5rem] bg-white text-[0.65rem] rounded-full flex items-center justify-center">
+                            <div class="flex flex-col text-xl sm:text-2xl text-center leading-6">
                                 <span class="font-extrabold">90%</span>
                                 <span class="text-xs">Progress</span>
                             </div>
@@ -186,7 +186,7 @@
             </section>
 
             <!-- Graphs -->
-            <section class="mt-8 grid grid-cols-2 gap-4">
+            <section class="mt-8 grid lg:grid-cols-2 gap-4">
                 <!-- <div class="w-6/12 space-y-4"> -->
                 <div class="p-4 rounded-lg bg-white border">
                     <!-- <h2 class="font-medium">Score moyen par niveau</h2> -->
