fit whole image in card home page

--- a/src/ce1.html
+++ b/src/ce1.html
@@ -474,8 +474,12 @@
                     class="border-2 border-dashed border-[#ff9281] rounded-3xl transform transition-transform duration-500 ease-in-out hover:scale-110 before:content-['nouveauté'] before:absolute before:-top-7 before:left-[40%] before:font-medium before:rounded-t-md before:bg-[#ff9281] before:p-1.5 before:text-sm">
                     <div class="flex flex-col items-center relative p-3 space-y-4 bg-white rounded-3xl">
                         <div class="w-full">
-                            <div class="h-44 bg-cover bg-no-repeat bg-center rounded-t-2xl"
+                            <!-- <div class="h-44 bg-cover bg-no-repeat bg-center rounded-t-2xl"
                                 style="background-image: url('https://medias.lumni.fr/uD8JYVlY_6jalAlw5AtVpSIc450/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/650b230bde49b7d4090f09f5');">
+                            </div> -->
+
+                            <div class="h-44">
+                                <img src="images/new-image.jpg" class="object-fill h-full w-full">
                             </div>
 
                             <div class="bg-light-blue pb-20 rounded-b-2xl relative md:h-[13rem]">
