ft: draft real estate home

--- a/src/ce1.html
+++ b/src/ce1.html
@@ -474,12 +474,8 @@
                     class="border-2 border-dashed border-[#ff9281] rounded-3xl transform transition-transform duration-500 ease-in-out hover:scale-110 before:content-['nouveauté'] before:absolute before:-top-7 before:left-[40%] before:font-medium before:rounded-t-md before:bg-[#ff9281] before:p-1.5 before:text-sm">
                     <div class="flex flex-col items-center relative p-3 space-y-4 bg-white rounded-3xl">
                         <div class="w-full">
-                            <!-- <div class="h-44 bg-cover bg-no-repeat bg-center rounded-t-2xl"
-                                style="background-image: url('https://medias.lumni.fr/uD8JYVlY_6jalAlw5AtVpSIc450/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/650b230bde49b7d4090f09f5');">
-                            </div> -->
-
                             <div class="h-44">
-                                <img src="images/new-image.jpg" class="object-fill h-full w-full">
+                                <img src="https://medias.lumni.fr/uD8JYVlY_6jalAlw5AtVpSIc450/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/650b230bde49b7d4090f09f5" class="object-fill h-full w-full">
                             </div>
 
                             <div class="bg-light-blue pb-20 rounded-b-2xl relative md:h-[13rem]">
@@ -511,8 +507,8 @@
                     <div
                         class="flex flex-col items-center relative p-3 space-y-4 bg-white rounded-3xl transform transition-transform duration-500 ease-in-out hover:scale-110">
                         <div class="w-full">
-                            <div class="h-44 bg-cover bg-no-repeat bg-center rounded-t-2xl"
-                                style="background-image: url('https://medias.lumni.fr/HuVAQg27PeSrLG5oSYm8ujlD-Bg/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/65eb4c57b9f9c0d8d8076223');">
+                            <div class="h-44">
+                                <img src="https://medias.lumni.fr/HuVAQg27PeSrLG5oSYm8ujlD-Bg/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/65eb4c57b9f9c0d8d8076223" class="object-fill h-full w-full">
                             </div>
 
                             <div class="bg-light-blue pb-20 rounded-b-2xl relative md:h-[13rem]">
@@ -544,8 +540,8 @@
                     <div
                         class="flex flex-col items-center relative p-3 space-y-4 bg-white rounded-3xl transform transition-transform duration-500 ease-in-out hover:scale-110">
                         <div class="w-full">
-                            <div class="h-44 bg-cover bg-no-repeat bg-center rounded-t-2xl"
-                                style="background-image: url('https://medias.lumni.fr/o8vHPtvFrd-sotHvFncNeesbNEE/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/65ec7d6f64578c3ca20a49ea');">
+                            <div class="h-44">
+                                <img src="https://medias.lumni.fr/o8vHPtvFrd-sotHvFncNeesbNEE/276x189/filters:focal(296460x-92130:296459x0):quality(80):max_bytes(120000)/65ec7d6f64578c3ca20a49ea" class="object-fill h-full w-full">
                             </div>
 
                             <div class="bg-light-blue pb-20 rounded-b-2xl relative md:h-[13rem]">
@@ -771,7 +767,7 @@
             $('.home-slider').slick(Object.assign({
                 slidesToShow: 4,
                 slidesToScroll: 1,
-                autoplay: false,
+                autoplay: true,
                 autoplaySpeed: 2000,
                 prevArrow: "<button type='button' class='absolute z-20 top-[40%] shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z' /></svg></button>",
                 nextArrow: "<button type='button' class='absolute z-20 top-[40%] right-1 shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z' /></svg></button>",
@@ -780,7 +776,7 @@
             $('.subject-slider').slick(Object.assign({
                 slidesToShow: 5,
                 slidesToScroll: 1,
-                autoplay: false,
+                autoplay: true,
                 autoplaySpeed: 2000,
                 prevArrow: "<button type='button' class='absolute z-20 top-[25%] shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M15.41 16.58L10.83 12l4.58-4.59L14 6l-6 6l6 6z' /></svg></button>",
                 nextArrow: "<button type='button' class='absolute z-20 top-[25%] right-1 shadow-slider text-white cursor-pointer  bg-[#393939] border border-black border-b-2 border-b-black rounded-full active:translate-y-0.5 flex items-center justify-center p-2'><svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'><path fill='currentColor' d='M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6z' /></svg></button>",
