--- a/src/reverie.html
+++ b/src/reverie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reverie</title>
+    <title>HOME</title>
     <style>
         @import url('output.css');
     </style>
@@ -16,11 +16,11 @@
     </div> -->
 
     <section class="relative w-full">
-        <nav class="absolute z-20 border-gray-200 bg-transparent w-full">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <nav class="absolute z-20 border-gray-200 bg-transparent w-full px-20">
+            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 py-4">
                 <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
                     <img src="images/logo-land-mark.png" class="h-8" alt="LOGO Logo" />
-                    <span class="self-center text-base leading-5 whitespace-nowrap text-white">
+                    <span class="self-center text-base leading-4 whitespace-nowrap text-white">
                         UNITED LANDMARK
                         <span class="block">ASSOCIATES</span>
                     </span>
@@ -37,7 +37,7 @@
                 </button>
                 <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                     <ul
-                        class="text-sm flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                        class="text-sm flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 font-medium">
                         <li>
                             <a href="#"
                                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">CLIENT
@@ -69,18 +69,18 @@
 
 
 
-    <section class="bg-white">
+    <section class="bg-white" id="buttonContainer">
         <div class="flex flex-col items-center justify-center text-center px-8 py-16 space-y-8">
-            <div class="text-sm">
-                <h2>LEADING THE WAY</h2>
-                <div class="text-2xl max-w-2xl">
+            <div class="text-xs">
+                <h2 class="tracking-wider">LEADING THE WAY</h2>
+                <div class="text-xl max-w-2xl">
                     We combine deep experience and strategic thinking with innovative marketing tools and technologies
                     to
                     ignite brands, grow businesses, and drive clients to positions of consistent market leadership.
                 </div>
             </div>
 
-            <button class="bg-[#acb9ba] rounded-full p-4 text-white">
+            <button id="scrollButton" class="bg-[#acb9ba] rounded-full p-2.5 text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24">
                     <path fill="currentColor" d="m20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z" />
                 </svg>
@@ -88,11 +88,11 @@
         </div>
     </section>
 
-    <section class="bg-[#acb9ba] py-16 ">
-        <div class="container mx-auto">
+    <section class="bg-[#acb9ba] py-16 " id="section2">
+        <div class="container">
             <div class="px-16">
-                <h2 class="text-sm">UNMATCHED EXPERIENCE</h2>
-                <div class="text-2xl max-w-lg">
+                <h2 class="text-sm tracking-wider">UNMATCHED EXPERIENCE</h2>
+                <div class="text-xl max-w-lg">
                     For nearly four decades, we have been proud to serve some of the nation&apos;s most prestigious
                     developers and homebuilders, and collaborate with luxury brands recognized around the world.
                 </div>
@@ -264,9 +264,9 @@
 
     <section class="bg-white">
         <div class="flex flex-col items-center justify-center text-center px-8 py-16 space-y-8">
-            <div class="text-lg">
-                <h2 class="text-sm">INTEGRATED SERVICES</h2>
-                <div class="text-2xl max-w-xl">
+            <div class="text-sm">
+                <h2 class="tracking-wider">INTEGRATED SERVICES</h2>
+                <div class="text-xl max-w-xl">
                     Our specialized services and multidisciplinary approach make us a comprehensive and collaborative
                     partner for our clients.
                 </div>
@@ -335,6 +335,32 @@
         </div>
     </footer>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var button = document.getElementById('scrollButton');
+            var section2 = document.getElementById('section2');
+
+            button.addEventListener('click', function () {
+                // Smooth scroll to section 2
+                section2.scrollIntoView({ behavior: 'smooth' });
+            });
+
+            // Animate above button which is also clickable
+            function handleIntersection(entries, _observer) {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        // Button is in view, apply animation and color change
+                        entry.target.classList.add('bg-black');
+                        entry.target.classList.add('animate-bounce');
+                    }
+                });
+            }
+
+            const observer = new IntersectionObserver(handleIntersection);
+            // Observe the button
+            observer.observe(button);
+        });
+    </script>
 </body>
 
 </html>
